force-app/main/default/objects/VIP_Booking__c/VIP_Booking__c.object-meta.xml
<CustomObject>
    <label>VIP Booking</label>
    <nameField>
        <displayFormat>VIPB-{0000}</displayFormat>
        <label>VIP Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Bookings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>