force-app/main/default/objects/VIP_Booking__c/fields/Booking_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking End Date</label>
    <type>Date</type>
</CustomField>