force-app/main/default/objects/VIP_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VIP Bookings</relationshipLabel>
    <relationshipName>VIP_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>