force-app/main/default/objects/VIP_Booking__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interstate – 1133</fullName>
            </value>
            <value>
                <fullName>International Rebate – 1121</fullName>
            </value>
            <value>
                <fullName>International Premium Mass &amp; Slots – 1132</fullName>
            </value>
            <value>
                <fullName>NSW &amp; QLD  – 1111</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>