force-app/main/default/objects/VIP_Booking__c/fields/Send_Confirmation_to_Patron__c.field-meta.xml
<CustomField>
    <fullName>Send_Confirmation_to_Patron__c</fullName>
    <label>Send Confirmation to Patron</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email &amp; SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>