force-app/main/default/objects/VIP_Booking__c/fields/Urgent_Flag__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Flag</label>
    <type>Checkbox</type>
</CustomField>