force-app/main/default/objects/VIP_Booking__c/fields/VIP_Booking_Formula__c.field-meta.xml
<CustomField>
    <fullName>VIP_Booking_Formula__c</fullName>
    <description>Formula for substitute of Name</description>
    <formula>IF($User.UITheme == &apos;Theme4t&apos;,
    CASE(Property__c,
        &apos;Sydney&apos;, SUBSTITUTE(Name, &apos;VIPB&apos;, &apos;SYD&apos;),
        &apos;Gold Coast&apos;, SUBSTITUTE(Name, &apos;VIPB&apos;, &apos;GC&apos;),
        &apos;Brisbane&apos;, SUBSTITUTE(Name, &apos;VIPB&apos;, &apos;BNE&apos;),
        Name
    ),
    HYPERLINK(Id, CASE(Property__c,
        &apos;Sydney&apos;, SUBSTITUTE(Name, &apos;VIPB&apos;, &apos;SYD&apos;),
        &apos;Gold Coast&apos;, SUBSTITUTE(Name, &apos;VIPB&apos;, &apos;GC&apos;),
        &apos;Brisbane&apos;, SUBSTITUTE(Name, &apos;VIPB&apos;, &apos;BNE&apos;),
        Name
    ))
)</formula>
    <label>VIP Booking</label>
    <type>Text</type>
</CustomField>