force-app/main/default/objects/VIP_Booking__c/validationRules/Only_Sydney_Can_Be_Used.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Sydney_Can_Be_Used</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(Property__c, &apos;Sydney&apos;))</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>Temporarily not available</errorMessage>
</ValidationRule>