force-app/main/default/objects/VIP_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VIP_Booking_Formula__c</columns>
    <columns>Booking_Start_Date__c</columns>
    <columns>Booking_End_Date__c</columns>
    <columns>Property__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>